testsuite/tests/generic_interfaces/bad_ref/test.out
== foo.lkt ==
foo.lkt:10:35: error: no entity called 'NonExisting' in the root scope
10 | class BarNode: FooNode implements NonExisting {
   |                                   ^^^^^^^^^^^


lkt_compile: Done
